# zx-spectrum-pico-rom

./: README.md  notebook.txt
firmware/: CMakeLists.txt  create_roms_image.pl  default_rom.h  roms.h  zx_pico_rom_fw.c  zx_pico_rom_fw.uf2
firmware/ROMs/: 48_pico.rom  LICENCES  if1.rom
firmware/switcher/: Makefile  font.asm  font.fnt  padded_rom  sw.lis  sw.map  sw.rom  sw.sym  switcher.c  switcher.c.lis  switcher.c.sym  test_switcher.rom  zpragma.inc
firmware_nmi/: README.md  roms.h  zx_pico_rom_fw.c
firmware_nmi_lower_border/: CMakeLists.txt  README.md  lower_border_timer.pio  roms.h  zx_pico_nmi_lower_border.c
images/: frame_trace.psd
srom/: errata.txt  fp-info-cache  fp-lib-table  pmbt2222a.kicad_sym  rp-pico.lib  srom.kicad_pcb  srom.kicad_prl  srom.kicad_pro  srom.kicad_sch  sym-lib-table
srom/fab1.0/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
srom/fab1.1/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
srom/fab1.2/: srom-B_Cu.gbl  srom-B_Mask.gbs  srom-B_Paste.gbp  srom-B_Silkscreen.gbo  srom-Edge_Cuts.gm1  srom-F_Cu.gtl  srom-F_Mask.gts  srom-F_Paste.gtp  srom-F_Silkscreen.gto  srom-NPTH-drl_map.gbr  srom-NPTH.drl  srom-PTH-drl_map.gbr  srom-PTH.drl
(+1 files in other folders)
